[package]
name = "lurk-ipld"
version = "0.1.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "IPLD library for Lurk"
repository = "https://github.com/lurk-lang/lurk-ipld"
readme = "README.md"

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
shared-version = true

[dependencies]
async-trait = "0.1.50"
cached = { version = "0.30.0", default-features = false }
fnv = "1.0.7"
lurk-ipld-cbor = { version = "0.1.0", path = "dag-cbor", optional = true }
lurk-ipld-cbor-derive = { version = "0.1.0", path = "dag-cbor-derive", optional = true }
lurk-ipld-core = { version = "0.1.0", path = "core" }
lurk-ipld-json = { version = "0.1.0", path = "dag-json", optional = true }
lurk-ipld-macro = { version = "0.1.0", path = "macro" }
lurk-ipld-pb = { version = "0.1.0", path = "dag-pb", optional = true }
log = "0.4.14"
multihash = { version = "0.16.0", default-features = false, features = ["multihash-impl"] }
parking_lot = "0.12.0"
thiserror = "1.0.25"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
criterion = "0.3.4"
proptest = "1.0.0"
model = "0.1.2"
multihash = "0.16.0"

[features]
default = ["dag-cbor", "dag-json", "dag-pb", "derive"]
dag-cbor = ["lurk-ipld-cbor"]
dag-json = ["lurk-ipld-json"]
dag-pb = ["lurk-ipld-pb"]
derive = ["lurk-ipld-cbor-derive"]
serde-codec = ["lurk-ipld-core/serde-codec"]

[workspace]
members = [
  "core",
  "dag-cbor",
  "dag-cbor-derive",
  "dag-json",
  "dag-pb",
  "macro",
  "dag-cbor-derive/examples/renamed-package",
]

[profile.release]
debug = true

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "store"
harness = false
