[package]
name = "libipld-core"
version = "0.12.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Base traits and definitions used by ipld codecs."
repository = "https://github.com/ipfs-rust/rust-ipld"

[dependencies]
anyhow = "1.0.40"
cid = { version = "0.8.0", default-features = false, features = ["std"] }
multibase = "0.9.1"
multihash = { version = "0.16.0", default-features = false, features = ["std"] }
thiserror = "1.0.25"

[dev-dependencies]
multihash = "0.16.0"
