[package]
name = "libipld-core"
version = "0.12.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Base traits and definitions used by ipld codecs."
repository = "https://github.com/ipfs-rust/rust-ipld"

[features]
default = ["std"]
std = ["anyhow/std", "cid/std", "multibase/std", "multihash/std", "thiserror"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
cid = { version = "0.8.0", default-features = false, features = ["alloc"] }
core2 = { version = "0.4", default-features = false, features = ["alloc"] }
multihash = { version = "0.16.0", default-features = false, features = ["alloc"] }

multibase = { version = "0.9.1", default-features = false, optional = true }
thiserror = {version = "1.0.25", optional = true }

[dev-dependencies]
multihash = { version = "0.16.0", default-features = false, features = ["multihash-impl", "blake3"] }
