[package]
name = "libipld-core"
description = "Base traits and definitions used by ipld codecs."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["anyhow/std", "cid/std", "multibase/std", "multihash/std", "thiserror"]
serde-codec = ["cid/serde-codec", "dep:serde"]
arb = ["dep:quickcheck", "cid/arb"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
core2 = { workspace = true }
multibase = { workspace = true }
multihash = { workspace = true }
quickcheck = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
multihash = { workspace = true, features = ["multihash-impl", "blake3"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_test = { workspace = true }
