[package]
name = "libipld-cbor-derive"
description = "ipld cbor codec proc macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
synstructure = { workspace = true }

[dev-dependencies]
libipld = { workspace = true }
trybuild = { workspace = true }
