[package]
name = "lurk-ipld-cbor"
version = "0.1.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1.4.3"
lurk-ipld-core = { version = "0.1.0", path = "../core" }
thiserror = "1.0.25"

[dev-dependencies]
hex = "0.4.3"
lurk-ipld-macro = { path = "../macro" }
multihash = "0.16.0"
quickcheck = "1.0.3"
serde_cbor = { version = "0.11.1", features = ["tags"] }
