[package]
name = "libipld-cbor"
description = "ipld cbor codec"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
byteorder = { workspace = true }
libipld-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
libipld-macro = { workspace = true }
multihash = { workspace = true }
quickcheck = { workspace = true }
serde_cbor = { workspace = true, features = ["tags"] }
