[package]
name = "libipld-pb"
version = "0.14.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ipld protobuf codec"
repository = "https://github.com/ipfs-rust/rust-ipld"

[dependencies]
libipld-core = { version = "0.14.0", path = "../core" }
prost = "0.11.0"
thiserror = "1.0.25"

[dev-dependencies]
libipld-macro = { path = "../macro" }
multihash = "0.17.0"
