[package]
name = "libipld-pb"
version = "0.15.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ipld protobuf codec"
repository = "https://github.com/ipfs-rust/rust-ipld"

[dependencies]
libipld-core = { version = "0.15.0", path = "../core" }
thiserror = "1.0.25"
quick-protobuf = "0.8.1"

[dev-dependencies]
libipld-macro = { path = "../macro" }
libipld = { path = "../" }
multihash = "0.17.0"
hex = "0.4.3"
