[package]
name = "libipld-pb"
description = "ipld protobuf codec"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
libipld-core = { workspace = true }
quick-protobuf = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
libipld = { workspace = true }
multihash = { workspace = true }
