[package]
name = "ipld-derive"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
cid = { git = "https://github.com/dvc94ch/rust-cid", branch = "cli" }
failure = "*"
libipld = { path = ".." }
trybuild = "1.0"
