[package]
name = "lurk-ipld-macro"
version = "0.1.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lurk-lang/lurk-ipld"

[dependencies]
lurk-ipld-core = { version = "0.1.0", path = "../core" }

[dev-dependencies]
multihash = { version = "0.16.0", features = ["blake3"] }
