[package]
name = "libipld-macro"
description = "ipld macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libipld-core = { workspace = true }

[dev-dependencies]
multihash = { workspace = true, features = ["blake3"] }
