[package]
name = "libipld-schema"
version = "0.0.1"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
bytes = { version = "0.5", optional = true }
cid = { git = "https://github.com/datalove-app/rust-cid", branch = "cli" }
derive_more = "0.99"
failure = "0.1"
lazy_static = "1.4"
libipld-base = { path = "../base" }
libipld-schema-derive = { path = "../schema-derive", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_cbor = { version = "0.11", features = ["tags"] }
serde_json = "^1.0"

[features]
default = []
bytes_ = ["bytes"]
derive = ["libipld-schema-derive"]
graphql = ["libipld-schema-derive", "libipld-schema-derive/graphql"]
